fixed camel-mina mediation deadlock by using separate camel-mina components

--- a/hl7mediator/pom.xml
+++ b/hl7mediator/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.talend.se.demo.vista.openmash</groupId>
+    <groupId>com.talend.se.vista.openmash</groupId>
     <artifactId>hl7mediator</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
@@ -109,11 +109,6 @@
             <artifactId>util-spring</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.talend.se.demo</groupId>
-            <artifactId>util-camel</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -142,7 +137,6 @@
                             org.apache.camel.component.jms,
                             org.apache.camel.component.hl7,
                             com.talend.se.demo.util.spring,
-                            com.talend.se.demo.util.camel,
                             *
                         </Import-Package>
                     </instructions>
