--- a/hl7mediator/src/main/resources/container.properties
+++ b/hl7mediator/src/main/resources/container.properties
@@ -16,3 +16,4 @@ mirth.receiver.jms.queue=${mirth.receiver.jms.queue}
 mirth.sender.mllp.port=${mirth.sender.mllp.port}
 mirth.listener.mllp.port=${mirth.listener.mllp.port}
 vista.listener.mllp.port=${vista.listener.mllp.port}
+localNetwork=${localNetwork}
