--- a/hl7mediator/src/main/resources/etc/com.talend.se.vista.openmash.hl7mediator.cfg
+++ b/hl7mediator/src/main/resources/etc/com.talend.se.vista.openmash.hl7mediator.cfg
@@ -11,6 +11,7 @@ mirth.receiver.jms.queue=mirth-hl7-out
 mirth.sender.mllp.port=6661
 mirth.listener.mllp.port=6662
 vista.listener.mllp.port=6663
+localNetwork=0.0.0.0
 
 # EC2 environment (running external to EC2)
 #activemq.host=amq0.openmashvista.net
@@ -22,6 +23,7 @@ vista.listener.mllp.port=6663
 #mirth.sender.mllp.port=11961
 #mirth.listener.mllp.port=6662
 #vista.listener.mllp.port=6663
+#localNetwork=0.0.0.0
 
 # local dev environment
 #activemq.host=localhost
@@ -33,3 +35,4 @@ vista.listener.mllp.port=6663
 #mirth.sender.mllp.port=6661
 #mirth.listener.mllp.port=6662
 #vista.listener.mllp.port=6663
+#localNetwork=0.0.0.0
