--- a/hl7mediator/karafContainer.properties
+++ b/hl7mediator/karafContainer.properties
@@ -8,6 +8,7 @@
 #mirth.sender.mllp.port=6661
 #mirth.listener.mllp.port=6662
 #vista.listener.mllp.port=6663
+#localNetwork=0.0.0.0
 
 # EC2 environment (running external to EC2)
 #activemq.host=amq0.openmashvista.net
@@ -19,6 +20,7 @@
 #mirth.sender.mllp.port=11961
 #mirth.listener.mllp.port=6662
 #vista.listener.mllp.port=6663
+#localNetwork=0.0.0.0
 
 # local dev environment
 activemq.host=localhost
@@ -30,3 +32,4 @@ mirth.receiver.jms.queue=mirth-hl7-out
 mirth.sender.mllp.port=6661
 mirth.listener.mllp.port=6662
 vista.listener.mllp.port=6663
+localNetwork=0.0.0.0
