--- a/hl7mediator/pom.xml
+++ b/hl7mediator/pom.xml
@@ -105,7 +105,7 @@
             <artifactId>camel-test-spring</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.talend.se.demo</groupId>
+            <groupId>com.talend.se.vista.openmash</groupId>
             <artifactId>util-spring</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -136,7 +136,7 @@
                             org.apache.camel.component.mina,
                             org.apache.camel.component.jms,
                             org.apache.camel.component.hl7,
-                            com.talend.se.demo.util.spring,
+                            com.talend.se.vista.openmash.util.spring,
                             *
                         </Import-Package>
                     </instructions>
