--- a/hl7mediator/src/main/resources/etc/com.talend.se.vista.openmash.hl7mediator.cfg
+++ b/hl7mediator/src/main/resources/etc/com.talend.se.vista.openmash.hl7mediator.cfg
@@ -1,17 +1,29 @@
 # etc only variable
 etcConfigVar=1000
 
-# EC2 environment (running in EC2)
-activemq.host=amq0.openmashvista.net
+# VA environment
+activemq.host=localhost
 activemq.port=61616
 activemq.concurrentConsumers=10
 activemq.maxConnections=8
-mirth.host=mirth.openmashvista.net
+mirth.host=ca-e8WC6WPM.vacloud.us
 mirth.receiver.jms.queue=mirth-hl7-out
 mirth.sender.mllp.port=6661
 mirth.listener.mllp.port=6662
 vista.listener.mllp.port=6663
 localNetwork=0.0.0.0
+
+# EC2 environment (running in EC2)
+#activemq.host=amq0.openmashvista.net
+#activemq.port=61616
+#activemq.concurrentConsumers=10
+#activemq.maxConnections=8
+#mirth.host=mirth.openmashvista.net
+#mirth.receiver.jms.queue=mirth-hl7-out
+#mirth.sender.mllp.port=6661
+#mirth.listener.mllp.port=6662
+#vista.listener.mllp.port=6663
+#localNetwork=0.0.0.0
 
 # EC2 environment (running external to EC2)
 #activemq.host=amq0.openmashvista.net
