Remove generated target(s) from source repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
+# build artifacts
+*~
+*.orig
+*.rej
+*.swp
+*.local
 *.class
+target
+derby.log
+.DS_Store
 
-# Package Files #
-*.jar
-*.war
-*.ear
-/util-spring/target/
+# ide artifacts
+.project
+.classpath
+.settings
+.metadata
+.checkstyle
+.ruleset
+.pmd
+*.iml
+*.ipr
+*.iws
+
